--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "nodemon": "^2.0.22",
     "pg": "^8.11.0",
     "postcss": "^8.4.14",
     "postgresql": "^0.0.1",
