--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "crypto": "^1.0.1",
@@ -20,6 +21,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "nodemon": "^2.0.22",
+    "paypal-rest-sdk": "^1.8.1",
     "pg": "^8.11.0",
     "postcss": "^8.4.14",
     "postgresql": "^0.0.1",
