--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "paypal-rest-sdk": "^1.8.1",
     "pg": "^8.11.0",
