--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "daisyui": "^2.52.0",
     "ejs": "^3.1.9",
