--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.22",
     "paypal-rest-sdk": "^1.8.1",
     "pg": "^8.11.0",
